# AVDC

./: .gitignore  AVDC_Main.py  AVDC_Main_new.py  CLAUDE.md  README.md  claude_cn.md  cli.py  config.ini  main.py  py-require.txt  pyproject.toml  replace_font.py
.pi/notes/: 2026-06-01-gui-optimization.md
Function/: Function.py  config_provider.py  core_engine.py  emby_client.py  file_ops.py  getHtml.py  image_ops.py  logger.py  scraper_adapter.py  scraper_base.py  scraper_dispatcher.py
Getter/: avsox.py  dmm.py  jav321.py  javbus.py  javdb.py  mgstage.py  xcity.py
PyQt5-GUI/: main.py
Ui/: AVDC.py  AVDC.ui  AVDC_new.py  AVDC_new.ui
application/: __init__.py  batch_service.py  file_processing_service.py  file_system_service.py  remote_service.py
cli/: cli.py  pyproject.toml
cli/test/: test_cli.py
core/: __init__.py  config.py  config_io.py  emby_client.py  errors.py  event_bus.py  events.py  file_operations.py  file_utils.py  image_processing.py  logger.py  metadata.py  models.py  naming_service.py  networking.py  orchestrator.py  pyproject.toml  scrape_pipeline.py  scraper_adapter.py  scraper_base.py  scraper_dispatcher.py  settings_provider.py
dev-log/: CHANGELOG.md  improvement_plan.json  missing_tests.json  optimization_plan.json
docs/: architecture.md  qml-ui-design.md  requirements.md  scraping-flow.md  ui-implementation.md  ui-kernel-communication.md
pyqt5-gui/: main.py  pyproject.toml
pyside6_gui/: log_bridge.py  log_model.py  main.py  processing_model.py  pyproject.toml  settings_model.py
pyside6_gui/qml/: AboutPage.qml  HomePage.qml  LogPage.qml  MacOSSidebar.qml  SettingsPage.qml  Theme.qml  ToolsPage.qml  main.qml  qmldir
pyside6_gui/qml/components/: ConfigCheckbox.qml  ConfigFilePicker.qml  ConfigInput.qml  ConfigRadioGroup.qml  ConfigSlider.qml  ConfigSwitch.qml  ConfigSwitchInt.qml  LogViewer.qml  ProgressBar.qml  ResizeHandle.qml  SectionCard.qml  StatusBadge.qml  TitleBar.qml  TitleBarButton.qml  ToolCard.qml
pyside6_gui/test/: conftest.py  test_integration.py  test_log_bridge.py  test_page_display.py  test_processing_model.py  test_processing_model_engine.py  test_qml_loading.py  test_settings_model.py  test_theme.py
test/: conftest.py  scrape_test.py  test_batch_service.py  test_config_provider.py  test_core.py  test_core_engine.py  test_emby_client.py  test_file_ops.py  test_file_processing_service.py  test_file_system_service.py  test_image_ops.py  test_image_processing.py  test_logger.py  test_remote_service.py  test_scraper_dispatcher.py
tui-go/: Makefile  go.mod  go.sum  main.go
(+75 files in other folders)
