[project]
name = "avdc-page"
version = "0.1.0"
description = "AVDC GUI: JAV metadata scraper and organizer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml",
    "pyqt5",
    "pyuic5-tool",
    "pillow",
    "beautifulsoup4",
    "pyquery",
    "requests",
    "baidu-aip",
    "cloudscraper",
    "chardet",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
