[project]
name = "avdc-page"
version = "0.1.0"
description = "AVDC: JAV metadata scraper and organizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml",
    "pillow",
    "beautifulsoup4",
    "pyquery",
    "requests",
    "baidu-aip",
    "cloudscraper",
    "chardet",
    "pyqt5",
    "pyuic5-tool",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["core", "cli", "PyQt5-GUI"]

[tool.pytest.ini_options]
testpaths = ["core/test", "cli/test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
